@@ -1,2 +1,1 @@
-
-
+__ZN3JSC12JSGlobalData15getHostFunctionEPFPvPNS_9ExecStateEE
