@@ -2,13 +2,13 @@ _JSCheckScriptSyntax
 _JSClassCreate
 _JSClassRelease
 _JSClassRetain
+_JSContextCreateBacktrace
 _JSContextGetGlobalContext
 _JSContextGetGlobalObject
 _JSContextGetGroup
 _JSContextGroupCreate
 _JSContextGroupRelease
 _JSContextGroupRetain
-_JSContextCreateBacktrace
 _JSEndProfiling
 _JSEvaluateScript
 _JSGarbageCollect
@@ -113,7 +113,6 @@ __ZN3JSC10Identifier8toUInt32ERKNS_7UStringERb
 __ZN3JSC10JSFunction14finishCreationEPNS_9ExecStateEPNS_14JSGlobalObjectEPNS_18FunctionExecutableEPNS_14ScopeChainNodeE
 __ZN3JSC10JSFunction14finishCreationEPNS_9ExecStateEPNS_14JSGlobalObjectEiRKNS_10IdentifierEPNS_14ExecutableBaseE
 __ZN3JSC10JSFunction4nameEPNS_9ExecStateE
-__ZN3JSC10JSFunction6createEPNS_9ExecStateEPNS_14JSGlobalObjectEPNS_9StructureEiRKNS_10IdentifierEPFPvS2_E
 __ZN3JSC10JSFunction6s_infoE
 __ZN3JSC10JSFunctionC1EPNS_9ExecStateEPNS_14JSGlobalObjectEPNS_9StructureE
 __ZN3JSC10throwErrorEPNS_9ExecStateENS_7JSValueE
@@ -137,11 +136,7 @@ __ZN3JSC12JSGlobalData14dumpSampleDataEPNS_9ExecStateE
 __ZN3JSC12JSGlobalData14resetDateCacheEv
 __ZN3JSC12JSGlobalData14sharedInstanceEv
 __ZN3JSC12JSGlobalData15dumpRegExpTraceEv
-__ZN3JSC12JSGlobalData15getHostFunctionEPFPvPNS_9ExecStateEE
 __ZN3JSC12JSGlobalData22clearBuiltinStructuresEv
-#ifndef NDEBUG
-__ZN3JSC12JSGlobalData23releaseExecutableMemoryEv
-#endif
 __ZN3JSC12JSGlobalData6createENS_15ThreadStackTypeENS_8HeapSizeE
 __ZN3JSC12JSGlobalDataD1Ev
 __ZN3JSC12RegExpObject6s_infoE
@@ -215,9 +210,9 @@ __ZN3JSC19SourceProviderCache5clearEv
 __ZN3JSC19SourceProviderCacheD1Ev
 __ZN3JSC19initializeThreadingEv
 __ZN3JSC20MarkedArgumentBuffer10slowAppendENS_7JSValueE
-__ZN3JSC20createReferenceErrorEPNS_9ExecStateERKNS_7UStringE
 __ZN3JSC20WriteBarrierCounters22usesWithBarrierFromCppE
 __ZN3JSC20WriteBarrierCounters25usesWithoutBarrierFromCppE
+__ZN3JSC20createReferenceErrorEPNS_9ExecStateERKNS_7UStringE
 __ZN3JSC22globalMemoryStatisticsEv
 __ZN3JSC22objectConstructorTableE
 __ZN3JSC23AbstractSamplingCounter4dumpEv
@@ -225,8 +220,8 @@ __ZN3JSC23objectProtoFuncToStringEPNS_9ExecStateE
 __ZN3JSC23setUpStaticFunctionSlotEPNS_9ExecStateEPKNS_9HashEntryEPNS_8JSObjectERKNS_10IdentifierERNS_12PropertySlotE
 __ZN3JSC24DynamicGlobalObjectScopeC1ERNS_12JSGlobalDataEPNS_14JSGlobalObjectE
 __ZN3JSC24JSObjectWithGlobalObject14finishCreationERNS_12JSGlobalDataEPNS_14JSGlobalObjectE
-__ZN3JSC24JSObjectWithGlobalObjectC2ERNS_12JSGlobalDataEPNS_9StructureE
 __ZN3JSC24JSObjectWithGlobalObjectC2EPNS_14JSGlobalObjectEPNS_9StructureE
+__ZN3JSC24JSObjectWithGlobalObjectC2ERNS_12JSGlobalDataEPNS_9StructureE
 __ZN3JSC24createStackOverflowErrorEPNS_9ExecStateE
 __ZN3JSC25evaluateInGlobalCallFrameERKNS_7UStringERNS_7JSValueEPNS_14JSGlobalObjectE
 __ZN3JSC35createInterruptedExecutionExceptionEPNS_12JSGlobalDataE
@@ -272,15 +267,13 @@ __ZN3JSC6JSLock4lockENS_14JSLockBehaviorE
 __ZN3JSC6JSLock6unlockENS_14JSLockBehaviorE
 __ZN3JSC6JSLock9lockCountEv
 __ZN3JSC6JSLockC1EPNS_9ExecStateE
-__ZN3JSC6RegExpD1Ev
 __ZN3JSC6RegExp6createERNS_12JSGlobalDataERKNS_7UStringENS_11RegExpFlagsE
+__ZN3JSC6RegExpD1Ev
 __ZN3JSC7JSArray13visitChildrenERNS_11SlotVisitorE
 __ZN3JSC7JSArray14finishCreationERNS_12JSGlobalDataE
 __ZN3JSC7JSArray14finishCreationERNS_12JSGlobalDataERKNS_7ArgListE
 __ZN3JSC7JSArray15setSubclassDataEPv
 __ZN3JSC7JSArray18getOwnPropertySlotEPNS_9ExecStateEjRNS_12PropertySlotE
-__ZN3JSC7JSArray6createERNS_12JSGlobalDataEPNS_9StructureERKNS_7ArgListE
-__ZN3JSC7JSArray6createERNS_12JSGlobalDataEPNS_9StructureE
 __ZN3JSC7JSArray6s_infoE
 __ZN3JSC7JSArray9setLengthEj
 __ZN3JSC7JSArrayC1ERNS_12JSGlobalDataEPNS_9StructureE
@@ -368,6 +361,7 @@ __ZN3WTF10StringImpl22containsOnlyWhitespaceEv
 __ZN3WTF10StringImpl23defaultWritingDirectionEPb
 __ZN3WTF10StringImpl23reverseFindIgnoringCaseEPS0_j
 __ZN3WTF10StringImpl37createStrippingNullCharactersSlowCaseEPKtj
+__ZN3WTF10StringImpl4fillEt
 __ZN3WTF10StringImpl4findEPFbtEj
 __ZN3WTF10StringImpl4findEPKcj
 __ZN3WTF10StringImpl4findEPS0_j
@@ -380,7 +374,6 @@ __ZN3WTF10StringImpl5upperEv
 __ZN3WTF10StringImpl6createEPKc
 __ZN3WTF10StringImpl6createEPKcj
 __ZN3WTF10StringImpl6createEPKtj
-__ZN3WTF10StringImpl4fillEt
 __ZN3WTF10StringImpl7replaceEPS0_S1_
 __ZN3WTF10StringImpl7replaceEjjPS0_
 __ZN3WTF10StringImpl7replaceEtPS0_
@@ -595,12 +588,12 @@ __ZNK3WTF6String11toIntStrictEPbi
 __ZNK3WTF6String12toUIntStrictEPbi
 __ZNK3WTF6String13toInt64StrictEPbi
 __ZNK3WTF6String14threadsafeCopyEv
-__ZNK3WTF6String15stripWhiteSpaceEv
 __ZNK3WTF6String15stripWhiteSpaceEPFbtE
+__ZNK3WTF6String15stripWhiteSpaceEv
 __ZNK3WTF6String16removeCharactersEPFbtE
 __ZNK3WTF6String17crossThreadStringEv
-__ZNK3WTF6String18simplifyWhiteSpaceEv
 __ZNK3WTF6String18simplifyWhiteSpaceEPFbtE
+__ZNK3WTF6String18simplifyWhiteSpaceEv
 __ZNK3WTF6String19characterStartingAtEj
 __ZNK3WTF6String4utf8Eb
 __ZNK3WTF6String5asciiEv
@@ -632,3 +625,7 @@ __ZTVN3JSC8JSObjectE
 __ZTVN3JSC8JSStringE
 _jscore_fastmalloc_introspection
 _kJSClassDefinitionEmpty
+
+#ifndef NDEBUG
+__ZN3JSC12JSGlobalData23releaseExecutableMemoryEv
+#endif
